--- a/website/logicmonitor.erb
+++ b/website/logicmonitor.erb
@@ -13,10 +13,10 @@
           <a href="#">Data Sources</a>
           <ul class="nav nav-visible">
             <li<%= sidebar_current("docs-logicmonitor-datasource-collectors") %>>
-              <a href="/docs/providers/logicmonitor/d/collectors.html">logicmonitor_findcollectors</a>
+              <a href="/docs/providers/logicmonitor/d/collectors.html">logicmonitor_collectors</a>
             </li>
             <li<%= sidebar_current("docs-logicmonitor-datasource-device-group") %>>
-              <a href="/docs/providers/logicmonitor/d/devicegroup.html">logicmonitor_finddevicegroups</a>
+              <a href="/docs/providers/logicmonitor/d/devicegroup.html">logicmonitor_device_group</a>
             </li>
           </ul>
         </li>
@@ -26,7 +26,7 @@
             <li<%= sidebar_current("docs-logicmonitor-resource-collector-group") %>>
               <a href="/docs/providers/logicmonitor/r/collectorgroup.html">logicmonitor_collectorgroup</a>
             </li>
-            <li<%= sidebar_current("docs-logicmonitor-resource-device") %>>
+            <li<%= sidebar_current("docs-logicmonitor-resource-device-x") %>>
               <a href="/docs/providers/logicmonitor/r/device.html">logicmonitor_device</a>
             </li>
             <li<%= sidebar_current("docs-logicmonitor-resource-device-group") %>>
