added dashboards and dashboard groups

--- a/website/logicmonitor.erb
+++ b/website/logicmonitor.erb
@@ -15,6 +15,12 @@
             <li<%= sidebar_current("docs-logicmonitor-datasource-collectors") %>>
               <a href="/docs/providers/logicmonitor/d/collectors.html">logicmonitor_collectors</a>
             </li>
+            <li<%= sidebar_current("docs-logicmonitor-datasource-dashboard") %>>
+              <a href="/docs/providers/logicmonitor/d/dashboard.html">logicmonitor_dashboard</a>
+            </li>
+            <li<%= sidebar_current("docs-logicmonitor-datasource-dashboard-group") %>>
+              <a href="/docs/providers/logicmonitor/d/dashboardgroup.html">logicmonitor_dashboard_group</a>
+            </li>
             <li<%= sidebar_current("docs-logicmonitor-datasource-device-group") %>>
               <a href="/docs/providers/logicmonitor/d/devicegroup.html">logicmonitor_device_group</a>
             </li>
@@ -28,6 +34,12 @@
             </li>
             <li<%= sidebar_current("docs-logicmonitor-resource-collector-group") %>>
               <a href="/docs/providers/logicmonitor/r/collectorgroup.html">logicmonitor_collectorgroup</a>
+            </li>
+            <li<%= sidebar_current("docs-logicmonitor-dashboard-x") %>>
+              <a href="/docs/providers/logicmonitor/r/dashboard.html">logicmonitor_dashboard</a>
+            </li>
+            <li<%= sidebar_current("docs-logicmonitor-dashboard-group-x") %>>
+              <a href="/docs/providers/logicmonitor/r/dashboardgroup.html">logicmonitor_dashboard_group</a>
             </li>
             <li<%= sidebar_current("docs-logicmonitor-resource-device-x") %>>
               <a href="/docs/providers/logicmonitor/r/device.html">logicmonitor_device</a>
