DEV-120566 Escalation Chain

--- a/website/docs/logicmonitor.erb
+++ b/website/docs/logicmonitor.erb
@@ -31,6 +31,9 @@
                         <li<%= sidebar_current("docs-logicmonitor-resource-device-group") %>>
                             <a href="/docs/providers/logicmonitor/r/device_group.html">logicmonitor_device_group</a>
                         </li>
+                        <li<%= sidebar_current("docs-logicmonitor-resource-escalation-chain") %>>
+                            <a href="/docs/providers/logicmonitor/r/escalation_chain.html">logicmonitor_escalation_chain</a>
+                        </li>
                     </ul>
                 </li>
 
