Alert Rule Implementation

--- a/website/docs/logicmonitor.erb
+++ b/website/docs/logicmonitor.erb
@@ -13,6 +13,9 @@
                 <li<%= sidebar_current("docs-logicmonitor-resource") %>>
                     <a href="#">Resources</a>
                     <ul class="nav nav-visible">
+                        <li<%= sidebar_current("docs-logicmonitor-resource-alert-rule") %>>
+                            <a href="/docs/providers/logicmonitor/r/alert_rule.html">logicmonitor_alert_rule</a>
+                        </li>
                         <li<%= sidebar_current("docs-logicmonitor-resource-collector") %>>
                             <a href="/docs/providers/logicmonitor/r/collector.html">logicmonitor_collector</a>
                         </li>
