DEV-145077 Website Support Implementation

--- a/website/logicmonitor.erb
+++ b/website/logicmonitor.erb
@@ -40,6 +40,9 @@
                         <li<%= sidebar_current("docs-logicmonitor-resource-website") %>>
                             <a href="/docs/providers/logicmonitor/r/website.html">logicmonitor_website</a>
                         </li>
+                        <li<%= sidebar_current("docs-logicmonitor-resource-website-group") %>>
+                            <a href="/docs/providers/logicmonitor/r/website_group.html">logicmonitor_website_group</a>
+                        </li>
                     </ul>
                 </li>
 
