Service Insights by terraform

--- a/website/logicmonitor.erb
+++ b/website/logicmonitor.erb
@@ -28,6 +28,9 @@
                         <li<%= sidebar_current("docs-logicmonitor-resource-dashboard-group") %>>
                             <a href="/docs/providers/logicmonitor/r/dashboard_group.html">logicmonitor_dashboard_group</a>
                         </li>
+                        <li<%= sidebar_current("docs-logicmonitor-resource-datasource") %>>
+                            <a href="/docs/providers/logicmonitor/r/datasource.html">logicmonitor_datasource</a>
+                        </li>
                         <li<%= sidebar_current("docs-logicmonitor-resource-device") %>>
                             <a href="/docs/providers/logicmonitor/r/device.html">logicmonitor_device</a>
                         </li>
