SDT support via Terraform Provider

--- a/website/logicmonitor.erb
+++ b/website/logicmonitor.erb
@@ -40,6 +40,9 @@
                         <li<%= sidebar_current("docs-logicmonitor-resource-escalation-chain") %>>
                             <a href="/docs/providers/logicmonitor/r/escalation_chain.html">logicmonitor_escalation_chain</a>
                         </li>
+                        <li<%= sidebar_current("docs-logicmonitor-resource-sdt") %>>
+                            <a href="/docs/providers/logicmonitor/r/sdt.html">logicmonitor_sdt</a>
+                        </li>
                         <li<%= sidebar_current("docs-logicmonitor-resource-website") %>>
                             <a href="/docs/providers/logicmonitor/r/website.html">logicmonitor_website</a>
                         </li>
