DEV-218829 Roles and Report groups

--- a/website/logicmonitor.erb
+++ b/website/logicmonitor.erb
@@ -40,6 +40,12 @@
                         <li<%= sidebar_current("docs-logicmonitor-resource-escalation-chain") %>>
                             <a href="/docs/providers/logicmonitor/r/escalation_chain.html">logicmonitor_escalation_chain</a>
                         </li>
+                        <li<%= sidebar_current("docs-logicmonitor-resource-report-group") %>>
+                            <a href="/docs/providers/logicmonitor/r/report_group.html">logicmonitor_report_group</a>
+                        </li>
+                        <li<%= sidebar_current("docs-logicmonitor-resource-role") %>>
+                            <a href="/docs/providers/logicmonitor/r/role.html">logicmonitor_role</a>
+                        </li>
                         <li<%= sidebar_current("docs-logicmonitor-resource-sdt") %>>
                             <a href="/docs/providers/logicmonitor/r/sdt.html">logicmonitor_sdt</a>
                         </li>
